--- a/db_k8s/1.2_db_cfg.yml
+++ b/db_k8s/1.2_db_cfg.yml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: todo-config
-  namespace: todo-app-99
+  namespace: todo-app-gzp
 data:
   SERVER_URL: "http://127.0.0.1:3000"
-  CLOUDANT_URL: "https://312c7150-eb85-42ac-83f5-225a79aeb266-bluemix.cloudantnosqldb.appdomain.cloud"
-  CLOUDANT_DB_NAME: "todo-db-rp"
-  BASE_PATH: "/todo-app-99"
+  CLOUDANT_URL: "https://1b2cc44a-6621-4979-a61c-05d397fc31fa-bluemix:cloudantnosqldb:appdomain:cloud"
+  CLOUDANT_DB_NAME: "todo-db-gzp"
+  BASE_PATH: "/todo-app-gzp"
