--- a/db_k8s/2.2_db_service.yml
+++ b/db_k8s/2.2_db_service.yml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: todo-app
+    app: todo-app-gzp
   name: todo-svc
-  namespace: todo-app-99
+  namespace: todo-app-gzp
 spec:
   type: NodePort
   ports:
@@ -13,5 +13,5 @@ spec:
     targetPort: 3000
     nodePort: 31099
   selector:
-    app: todo-app
+    app: todo-app-gzp
   
